# Open-Mind

./: .gitattributes  .gitignore  ConfidenceModel.ipynb  DEPLOY_RENDER.md  DEPLOY_VERCEL.md  HUGGING_FACE_EVIDENCE_ENDPOINT.md  README.md  api.py  app.py  benchmark_results.json  confidence_dataset.jsonl  confidence_dataset_50.jsonl  generate_confidence_dataset.py  last_run_output.json  professional_benchmark_queries.txt  professional_confidence_dataset.jsonl  professional_queries_50.txt  professional_smoke_results.json  pyproject.toml  queries.txt  queries_50.txt  render.yaml  requirements-render.txt  requirements.txt  run_confidence_demo.py  run_evidence_demo.py  run_feature_demo.py  run_parsing_demo.py  run_professional_benchmark.py  run_retrieval_demo.py  run_structured_claim.py  train_confidence_model.py
confidence_model/: confidence_meta.json  confidence_model.pt
evidence_classifier_model/: config.json  label_config.json  model.safetensors  tokenizer.json  tokenizer_config.json
src/claim_engine/: __init__.py  autonomous_pipeline.py  confidence_model.py  confidence_schema.py  evidence.py  evidence_classifier.py  evidence_schema.py  feature_schema.py  features.py  final_answer_schema.py  final_summarizer.py  parser.py  parser_schema.py  query_refiner.py  refinement_schema.py  retrieval.py  retrieval_schema.py  schema.py  settings.py  structurer.py
web_intelegence/: .env.example  .gitignore  DEPLOY_VERCEL.md  SUPABASE_DATA_SETUP.md  index.html  package-lock.json  package.json  vite.config.ts
web_intelegence/src/: mockData.ts
web_intelegence/src/app/: App.tsx
(+38 files in other folders)
